@@ -1,3 +1,8 @@
+Thu Dec 25 01:29:08 EST 2008  <baueran@gmail.com>
+
+- Makefile, ChangeLog, NEWS: add release notes
+- src/minimise.ml: add inline documentation
+
 Tue Dec 23 06:19:03 EST 2008  <baueran@gmail.com>
 
 - src/minimise.ml: new
